chore(build): enclose set-output command with double quote

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -35,7 +35,7 @@ jobs:
     
     - name: Get changelog
       id: get_changelog
-      run: echo ::set-output name=changelog::`standard-version --prerelease rc --dry-run | sed -n '/^---$/,/^---$/p' | grep -v '^---$'`
+      run: echo "::set-output name=changelog::`standard-version --prerelease rc --dry-run | sed -n '/^---$/,/^---$/p' | grep -v '^---$'`"
     
     - name: output changelog
       run: echo "$changelog"
