--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: 14
+        fetch-depth: 1000
     
     - name: Install standard-version
       run: npm install -g standard-version
