--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Extract ref
       id: extract_ref
       run: |
-        command=`echo "$issue_comment_body" | egrep '^/hotfix [^ ]+$' | sed -r 's/\/hotfix //g'`
-        ref=`echo "$command" | egrep '^/hotfix [^ ]+$' | sed -r -e 's/\/hotfix //g'`
+        ref=`echo "$issue_comment_body" | egrep '^/hotfix [^ ]+$' | sed -r 's/\/hotfix //g'`
         if [[ -z $ref ]]; then
           exit 1
         fi
@@ -40,6 +39,7 @@ jobs:
       with:
         ref: ${{ steps.extract_ref.outputs.ref }}
         fetch-depth: 0
+      if: ${{ steps.extract_ref.outputs.ref != "" && steps.extract_ref.outputs.ref != "master" }}
     
     - name: Setup git ID
       run: |
