--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -62,7 +62,9 @@ jobs:
       
     - name: Push the tag
       run: |
-        git push --follow-tags origin master
+        git push --follow-tags origin $ref
+      env:
+        ref: ${{ steps.extract_ref.outputs.ref }}
 
     - name: update issue
       uses: octokit/request-action@v2.x
